# dubins_curves

./: CMakeLists.txt  README.md  dubins_planner_plugin.xml  nav_core_plugin.xml  package.xml  project11_navigation_plugin.xml
include/: dubins.h
include/dubins_curves/: dubins_planner.h  dubins_plugin.h
src/: dubins.c  dubins_curves_node.cpp  dubins_planner.cpp  dubins_plugin.cpp
srv/: DubinsCurves.srv  DubinsCurvesLatLong.srv
