<?xml version="1.0"?>
<package format="2">
  <name>dubins_curves</name>
  <version>0.0.0</version>
  <description>The dubins_curves package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>project11</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>

  <export>
    <nav_core plugin="${prefix}/dubins_planner_plugin.xml" />
  </export>
</package>
